Fix improper spacing when viewing content.

--- a/assets/css/hello.css
+++ b/assets/css/hello.css
@@ -82,7 +82,7 @@ a.social :hover {
     top: 0;
     left: 0;
     bottom: 0;
-    width: 21rem;
+    width: 20rem;
     text-align: left;
   }
 }
